<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_nim"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/value_nim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="yournim"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/title_nim"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_nim"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/value_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="yourname"
            android:textSize="18sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/title_name"
            app:layout_constraintTop_toBottomOf="@id/value_nim"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_age"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_name"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/value_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="yourage"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/title_age"
            app:layout_constraintTop_toBottomOf="@id/value_name"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>